--- a/controle-series/package.json
+++ b/controle-series/package.json
@@ -1,16 +1,22 @@
 {
     "private": true,
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "mix",
+        "watch": "mix watch",
+        "prod": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@babel/core": "^7.27.1",
+        "@babel/preset-env": "^7.27.2",
         "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "babel-loader": "^10.0.0",
+        "laravel-mix": "^6.0.49",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.88.0",
+        "sass-loader": "^12.1.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.6"
     }
 }
